@@ -2,6 +2,11 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-06-27 Kimmo
+ PATCH: [ 1512708 ] Fix compile with VS2005
+  Also additional cleanup for CCrystalTextView::GetMarginWidth()
+  Src/editlib: ccrystaltextview.cpp ccrystaltextview.h
+
 2006-06-26 Kimmo
  PATCH: [ 1510596 ] Updated Readme-Swedish.txt
   Submitted by Hans Eriksson
